# Cursor-Buildathon-Project

./: .dockerignore  .gitignore  Cursor_Buildathon_Project_Submission_Document.md  README.md  docker-compose.dev.yml  docker-compose.yml  merchant_seylan.md  package-lock.json  package.json  project.md  vercel.json
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  vercel.json
backend/app/: __init__.py  config.py  database.py  embeddings.py  main.py  market_intelligence_seed.py
backend/app/agents/: __init__.py  conversation_coordinator.py  market_rag.py  quant_underwriter.py  vision_agronomist.py
backend/app/constants/: crops.py  districts.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: __init__.py  loan.py  profile.py  voice.py
backend/app/services/: __init__.py  evaluation.py  loan_intake.py  profile_resolver.py  seylan_api_service.py  storage.py
backend/app/vision/: __init__.py  calibration.py  field_health.py  image_signals.py  prompts.py
backend/scripts/: probe_seylan_sandbox.py  seed_market_intelligence.py  test_hackathon_accounts.py
backend/tests/: test_field_health.py  test_quant_underwriter.py
frontend/: .env.example  Dockerfile  Dockerfile.dev  docker-entrypoint.dev.sh  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: AgriLendDashboard.tsx  MultimodalUploader.tsx  RealtimeVoiceConsole.tsx  UnderwritingTerminal.tsx
frontend/constants/: banking.ts  crops.ts  dashboardSteps.ts  districts.ts  (+2 more)
scripts/: sync-next-output.mjs
(+74 files in other folders)
