[project]
name = "agri-lend-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "python-multipart==0.0.20",
    "uvicorn[standard]==0.32.1",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "supabase==2.30.0",
    "google-genai==1.16.1",
    "openai==1.59.6",
    "Pillow>=10.4.0",
    "httpx>=0.27.0",
]

[tool.vercel]
entrypoint = "main:app"

[tool.vercel.scripts]
install = "pip install -r requirements.txt"
